--- a/Styles.css
+++ b/Styles.css
@@ -1,13 +1,151 @@
+:root {
+    /* Color styles */
+    --white: rgba(255, 255, 255, 1);
+    --grey: rgba(150, 150, 150, 1);
+    --black: rgba(11, 29, 3, 1);
+    --background: rgba(255, 252, 246, 1);
+    --hover: rgba(160, 153, 108, 1);
+    --grey-2: rgba(247, 241, 230, 1);
+    --grey-3: rgba(242, 242, 242, 1);
+
+    /* Text-size styles */
+    /* base size: coffee-body-medium-20 (20px) */
+    --head-bold-80: 4rem;
+    --head-bold-56: 2.8rem;
+    --subhead-regular-32: 1.6rem;
+    --subhead-bold-48: 1.6rem;
+    --body-medium-24: 1.2rem;
+    --body-medium-20: 1rem;
+
+    /*Font Family*/
+    --Playfair-regular: "Playfair Display Regular";
+    --Playfair-bold: "Playfair Display Bold";
+    --playfair-bold-italic: "Playfair Display Bold-Italic";
+    --gilroy-bold: "Gilroy Bold";
+    --gilroy-medium: "Gilroy Medium";
+    --gilroy-regular: "Gilroy Regular";
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Playfair Display Bold", serif;
+    font-size: 1.75rem;
 }
 
-p {
+p, span {
     font-family: "Gilroy Medium", sans-serif;
+    font-size: 1rem;
+}
+
+.headline-1 {
+    font-family: var(--Playfair-bold);
+    font-size: var(--head-bold-80);
+    color: var(--black);
+}
+
+.headline-2 {
+    font-family: var(--Playfair-bold);
+    font-size: var(--head-bold-56);
+    color: var(--black);
+}
+
+.subhead {
+    font-family: var(--gilroy-regular);
+    font-size: var(--subhead-regular-32);
+}
+
+.subhead-bold {
+    font-family: var(--gilroy-bold);
+    font-size: var(--subhead-bold-48);
+}
+
+.body-large {
+    font-family: var(--gilroy-medium);
+    font-size: var(--body-medium-24);
+}
+
+.body-small {
+    font-family: var(--gilroy-medium);
+    font-size: var(--body-medium-20);
+}
+
+.button {
+    width: 100%;
+    max-width: 12rem;
+    height: 48px;
+    background-color: var(--black);
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.75rem;
+    font-family: var(--gilroy-medium);
+    font-size: var(--body-medium-24);
+    cursor: pointer;
+    transition: 0.5s ease-out;
+}
+
+.button:hover,
+.button:active {
+    background-color: var(--white);
+    color: var(--black);
+}
+
+.button:disabled {
+    background-color: var(--grey);
+    color: var(--grey-2);
+}
+
+.input-set {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    position: relative;
+    
+}
+
+input {
+    width: 100%;
+    max-width: 12rem;
+    height: 48px;
+    border-radius: 0.25rem;
+    border: 0.125rem solid var(--black);
+    padding: 1rem;
+}
+
+.label {
+    color: var(--grey);
+    font-family: "Gilroy Medium";
+    /* position: absolute;
+    top: calc(48px / 3);
+    left: 16px; */
+}
+
+.label-none {
+    display: none;
+}
+
+.header {
+    background: var(--black);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 1rem 0;
+}
+
+.header h1 {
+    color: var(--white);
+}
+
+.main {
+    background: url(./assets/Images/);
 }
