--- a/Styles.css
+++ b/Styles.css
@@ -130,22 +130,63 @@ input {
     display: none;
 }
 
-.header {
-    background: var(--black);
 
+/*NAVBAR*/
+.nav-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 1rem 0;
+    padding: 1rem;
 }
 
 .header h1 {
     color: var(--white);
 }
 
-.main {
-    background: url(./assets/Images/);
+.header a {
+    display: flex;
+    height: 48px;
+    width: 48px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    transition: 0.2s ease-out;
+}
+
+.header a:hover {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+
+/*HERO SECTION*/
+.hero {
+    background: url(./assets/Images/Hero.jpg);
+    height: 900px;
+    padding-top: 9.75rem;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    color: var(--white);
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.hero-container h1 {
+    color: var(--white);
+    max-width: 704px;
+    padding-bottom: 1rem;
 }
